fixed bug overflow

--- a/practice1/css/index.css
+++ b/practice1/css/index.css
@@ -93,6 +93,7 @@
     	/*height: 320px;*/
         min-width: 900px;
         position: relative;
+        overflow: hidden;
     }
     .banner img {
         max-width: 100%;
